--- a/0030 - Responsif Portofolio/index1.html
+++ b/0030 - Responsif Portofolio/index1.html
@@ -16,7 +16,7 @@
             <div class="intro">
                 <h1>Hello, <span></span></h1>
                 <h1>My Name is <span></span></h1>  
-                <h1>Nada Karima <span></span></h1>    
+                <h1>Kaloka Radya Nanda <span></span></h1>    
                 <a href="#" type="button">PORTOFOLIO</a>
             </div>
         </div>
