--- a/0028 - CSS Grid/Latihan8.html
+++ b/0028 - CSS Grid/Latihan8.html
@@ -18,6 +18,9 @@
             height: 100vh;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
+            grid-auto-columns: 1fr;
+            grid-template-rows: repeat(3, 1fr);
+            grid-auto-columns: 1fr;
             gap: 10px;
             background-color: grey;
 
@@ -45,6 +48,12 @@
             grid-column-end: 3;
             grid-row-start: 4;
             grid-row-end: 2; */
+
+            /* variasi 4 */
+            /* grid-column-start: 1;
+            grid-column-end: -2; */
+            grid-row-start: 2;
+            grid-row-end: 4;
 
         }
     </style>
