--- a/0030 - Responsif Portofolio/index1.html
+++ b/0030 - Responsif Portofolio/index1.html
@@ -16,18 +16,11 @@
             <div class="intro">
                 <h1>Hello, <span></span></h1>
                 <h1>My Name is <span></span></h1>  
-                <h1>Kaloka Radya Nanda <span></span></h1>    
+                <h1>Erlangga Dewa Sakti <span></span></h1>    
                 <a href="#" type="button">PORTOFOLIO</a>
             </div>
         </div>
     </section>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore porro blanditiis corrupti earum consequatur,
-        fugit fugiat totam cumque odit explicabo aliquam culpa, accusantium nihil, saepe quibusdam! Nobis exercitationem
-        qui consectetur hic, in reiciendis! Cum vel dolorum ab a suscipit eaque, consectetur voluptatibus, voluptates
-        hic sequi impedit fugit culpa harum quia iste ex! Nam nesciunt possimus cumque facilis! Rerum veniam ullam
-        aliquid, repellat dolore enim. Cumque perspiciatis asperiores libero, delectus quae amet? Accusamus beatae optio
-        veritatis inventore veniam, maiores aperiam, aut amet esse accusantium minima omnis delectus voluptates dolorum,
-        saepe libero! Id odit dicta at voluptatibus, omnis enim repudiandae neque veritatis.</p>
 </body>
 
 </html>
