--- a/0032 - Responsive Website with CSS Grid/index.html
+++ b/0032 - Responsive Website with CSS Grid/index.html
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Responsive Web CSS Grid</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="css/index.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        />
+    </head>
 
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Responsive Web CSS Grid</title>
-   <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="css/index.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-</head>
+    <body>
+        <div class="container">
+            <nav class="navbar">
+                <i
+                    id="fixed"
+                    class="fas fa-bars"
+                    onclick="myFunction(), fixedFunction()"
+                ></i>
+                <h3>BRAIN WASH</h3>
+                <ul id="list-item">
+                    <a href="">
+                        <li>Home</li>
+                    </a>
+                    <a href="">
+                        <li>About</li>
+                    </a>
+                    <a href="">
+                        <li>Features</li>
+                    </a>
+                    <a href="">
+                        <li>Contact</li>
+                    </a>
+                </ul>
+            </nav>
+            <div class="main">
+                <div class="hero">
+                    <h3 class="heading">Brainwash Merch Shop</h3>
+                    <br />
+                    <p class="sub-heading">Hoodie and T-Shirt</p>
+                </div>
+                <div class="feature feature1">
+                    <h4 class="price">IDR 150K</h4>
+                    <p class="item">T-Shirt</p>
+                </div>
+                <div class="feature feature2">
+                    <h4 class="price">IDR 100K</h4>
+                    <p class="item">T-Shirt</p>
+                </div>
+            </div>
+        </div>
+        <script>
+            function myFunction() {
+                var element = document.getElementById("list-item");
+                element.classList.toggle("toggleOn");
+            }
 
-<body>
-   <div class="container">
-      <nav class="navbar">
-         <i id="fixed" class="fas fa-bars" onclick="myFunction(), fixedFunction()"></i>
-         <h3>BRAIN WASH</h3>
-         <ul id="list-item">
-            <a href="">
-               <li>Home</li>
-            </a>
-            <a href="">
-               <li>About</li>
-            </a>
-            <a href="">
-               <li>Features</li>
-            </a>
-            <a href="">
-               <li>Contact</li>
-            </a>
-         </ul>
-      </nav>
-      <div class="main">
-         <div class="hero">
-            <h3 class="heading">Brainwash Merch Shop</h3>
-            <br>
-            <p class="sub-heading">Hoodie and T-Shirt</p>
-         </div>
-         <div class="feature feature1">
-            <h4 class="price">IDR 150K</h4>
-            <p class="item">T-Shirt</p>
-         </div>
-         <div class="feature feature2">
-            <h4 class="price">IDR 100K</h4>
-            <p class="item">T-Shirt</p>
-         </div>
-      </div>
-   </div>
-   <script>
-      function myFunction() {
-         var element = document.getElementById("list-item");
-         element.classList.toggle("toggleOn");
-      }
-
-      function fixedFunction() {
-         var element = document.getElementById("fixed");
-         element.classList.toggle("fixedOn");
-      }
-   </script>
-</body>
-
+            function fixedFunction() {
+                var element = document.getElementById("fixed");
+                element.classList.toggle("fixedOn");
+            }
+        </script>
+    </body>
 </html>
